--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
     </section>
      <div class="footer">
       <i style="font-size:24px" class="fa">&#xf292;</i>
+      <h2>Hot Gadgets BD</h2>
+      <h3>
+        Providing reliable tech items since 1992
+      </h3>
+     <p>
+
+      Copyright © 2023 - All right reserved</p> 
      </div>
     <script src="scripts.js"></script>
   </body>
