--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
+  <body id="body">
     <main class="main" id="main-section" id>
       <nav>
         <h1 class="heading">Hot Gadgets</h1>
@@ -42,18 +42,6 @@
         <button class="search" id="search">Search</button>
       </div>
       <div class="product" id="product">
-        <div class="card">
-          <img
-            src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg"
-            alt=""
-          />
-          <h1>iPhone 13 mini</h1>
-          <p>
-            There are many variations of passages of available, but the majority
-            have suffered
-          </p>
-          <button class="search card-Search">Show Details</button>
-        </div>
         
       </div>
       
